# Cpp

./: README.md
Demo/: main.i
HelloWorld/: main.cpp
chapter0/: README.md
chapter00/: README.md  main.cpp  main.i  main.s
chapter01/: CMakeLists.txt  README.md  annotations.cc  c-styleCpp.cpp  c1.cpp  io.cpp
chapter02/: CMakeLists.txt  PtrRef.cpp  PtrRef5.cpp  README.md  autoDeduction.cpp  const.cpp  constConstexpr.cpp  initialization.cpp  pointer.cpp  ptrRef.cpp  reference.cpp  scope.cpp  type.cpp  type2.cpp  typeAlias.cpp  typeConversion.cpp  variable.cpp
chapter03/: CMakeLists.txt  README.md  String.cpp  Vector.cpp  array.cpp  arrayData.cpp  arrayOperate.cpp  arrayOtherOperation.cpp  arrayPointer.cpp  cString.cpp  definitionArray.cpp  multi-dimensionArray.cpp  string.cpp  vector.cpp
chapter04/: CMakeLists.txt  README.md  arithmeticOperator.cpp  assignmentOperator.cpp  bitsOperator.cpp  logicOperator.cpp  lvalRval.cpp  lvalrval.cpp  otherOperator.cpp  typeConvert.cpp
chapter05/: CMakeLists.txt  DuffsDevice.cpp  README.md  branchStatement.cpp  loopStatement.cpp  veriDuffsDevice.cc
chapter06/: CMakeLists.txt  README.md  consteval.cc  constexpr.cpp  function.cpp  functionOverload.cpp  functionParameter.cpp  functionPointer.cpp  functionReturnType.cpp  fundamentalFunction.cpp  header.h  inlineHeaded.h  inlineMain.cpp  inlineSource.cpp  nameLookup.cpp  nonviableCandidates.cpp  twoParaMain.cpp
chapter07/: CMakeLists.txt  README.md  example.txt  fileStream.cc  inOutput.cc  in_Output.cc  ioSync.cc  iolocate.cc  iostate.cc  iostream.cc  memoryStream.cc
chapter08/: CMakeLists.txt  README.md  dyMemory.cc  others.cc  smartPointer.cc
chapter09/: CMakeLists.txt  README.md  array.cc  interfaceAdaptor.cc  iterator.cc  mapMultixxx.cc  otherAdaptor.cc  otherSequenceContainer.cc  set.cc  typeAdaptor.cc  unordered_xxx.cc  vector.cc
chapter1/: README.md  c1.cpp  namespace.cpp  struct.cpp
chapter10/: CMakeLists.txt  README.md  bind.cc  generic.cc  lambda.cc  lambda1.cc  lambda2.cc  ranges.cc
chapter11/: CMakeLists.txt  README.md  access.cc  constructorDestructor.cc  constructorDestructor2.cc  constructorDestructor3.cc  constructorDestructor4.cc  literal.cc  memberFunction.cc  memberPointer.cc  struct.cc
chapter12/: CMakeLists.txt  README.md  inheritance.cc  inheritance2.cc  operatorOverload.cc  operatorOverload2.cc  specialFunction.cc  supplymentary.cc  updateKnowledge.cc  virtualFunction.cc  virtualFunction2.cc
chapter13/: CMakeLists.txt  README.md  alias.cc  aliasVariadic.cc  classTemplate.cc  concepts.cc  expansionFolding.cc  functionTemplate.cc  functionTemplate2.cc  header.h  perfectForwardingLambda.cc  resolveAmbiguityVariableTemplates.cc  source.cc  templateParameters.cc  variadic.cc
chapter14/: CMakeLists.txt  README.md  branch.cc  loop.cc  metaProgramming.cc  order.cc  reduceInstantiation.cc
chapter15/: CMakeLists.txt  README.md  bitFields.cc  enum.cc  except.cc  except2.cc  except3.cc  except4.cc  exception.cc  exception2.cc  exception3.cc  exception4.cc  nestClass.cc  nestNamespace.cc  union.cc
chapter2/: PtrRef3.cpp  README.md  autoDeduction.cpp  const.cpp  type1.cpp  type2.cpp
chapter3/: CMakeLists.txt  README.md  String.cpp  Vector.cpp  array.cpp  arrayData.cpp  arrayOperate.cpp  arrayPointer.cpp  cString.cpp  multi-dimensionArray.cpp
chapter4/: CMakeLists.txt  README.md  arithmeticOperator.cpp  assignmentOperator.cpp  bitsOperator.cpp  expression.cpp  logicOperator.cpp  lvalrval.cpp  otherOperator.cpp  typeConvert.cpp
chapter5/: CMakeLists.txt  DuffsDevice.cpp  README.md  branchStatement.cpp  breakContinue.cpp  loopStatement.cpp  statement.cpp
chapter6/: CMakeLists.txt  README.md  constexpr.cpp  function.cpp  function2.cpp  functionOverload.cpp  functionParameter.cpp  functionReturnType.cpp  fundamentalFunction.cpp  header.h  inlineHeaded.h  inlineSource.cpp  nameLookup.cpp
chapter7/: CMakeLists.txt  README.md  ioSync.cc  iolocate.cc  iostate.cc  memoryStream.cc
chapter8/: CMakeLists.txt  README.md
chapter9/: CMakeLists.txt  README.md  interfaceAdaptor.cc  mapMultixxx.cc  set.cc  typeAdapter.cc  unordered_xxx.cc
chatper0/: CMakeLists.txt
chatper1/: CMakeLists.txt  README.md  c.cpp  c1.cpp  io.cpp
chatper2/: CMakeLists.txt  PtrRef2.cpp  PtrRef4.cpp  PtrRef5.cpp  README.md  TypeChange.cpp  autoDeduction.cpp  scope.cpp  type1.cpp  type2.cpp  variable2.cpp
chatper8/: CMakeLists.txt  README.md  dyMemory.cc  others.cc
demo/: main.s
singleton1/: CMakeLists.txt  README.md  main.cpp  sing.cpp  sing.h
singleton2/: CMakeLists.txt  README.md  main.cpp  sing.h
singleton3/: CMakeLists.txt  README.md  main.cpp  sing.h
singleton4/: README.md
singleton4/0/: CMakeLists.txt  main.cpp
singleton4/1/: README.md  main.cpp  sing.h
singleton4/2/: README.md  main.cpp  sing.h
singleton5/: README.md
singleton5/0/: README.md  main.cpp  sing.cpp  sing.h
singleton5/1/: README.md  main.cpp  sing.cpp  sing.h
singleton6/: README.md
singleton6/0/: README.md  main.cpp  sing.cpp  sing.h
singleton6/5_0/: main.cpp  sing.cpp  sing.h
singleton6/5_1/: README.md  main.cpp  sing.cpp  sing.h
singleton7/: CMakeLists.txt  README.md  main.cpp  sing.cpp  sing.h
singleton8/: README.md
singleton8/0/: CMakeLists.txt  main.cpp  sing.cpp  sing.h
singleton8/1/: CMakeLists.txt  main.cpp  sing.cpp  sing.h
singleton9/: CMakeLists.txt  README.md  main.cpp  sing1.h  sing2.h  sing_temp.h  src.cpp
singletonAddition/: README.md  build_cmd
